tests/snapshots/snapshot_test__assigned_tasks_view_empty.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌ Tasks ───────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
