tests/snapshots/snapshot_test__assigned_tasks_view_with_tasks.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌ Tasks ───────────────────────────────────────────────────┐
│[↑] I Review Q2 planning doc                              │
│[⚡ ] T Fix bug in task filtering                          │
│[•] D Update API documentation                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
