tests/snapshots/snapshot_test__assigned_tasks_view_with_tasks_loaded.snap
---
source: tests/snapshot_test.rs
assertion_line: 59
expression: snapshot
---
┌ Tasks ───────────────────────────────────────────────────┐
│▸ [•] - Review Q2 planning doc                            │
│  [•] - Fix bug in task filtering                         │
│  [•] - Update API documentation                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
