tests/snapshots/snapshot_test__auth_view_empty.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
            ┌ Authentication ──────────────────┐            
            │                                  │            
            │ Enter your ClickUp API Token     │            
            │ Token: [Type or paste your token │            
            │                                  │            
            │ Press Enter to connect, Esc to c │            
            │                                  │            
            └──────────────────────────────────┘
