tests/snapshots/snapshot_test__auth_view_error.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
            ┌ Authentication ──────────────────┐            
            │                                  │            
            │ Enter your ClickUp API Token     │            
            │ Token: [Type or paste your token │            
            │ Invalid token. Please try again. │            
            │ Press Enter to connect, Esc to c │            
            │                                  │            
            └──────────────────────────────────┘
