tests/snapshots/snapshot_test__auth_view_partial_token.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
            ┌ Authentication ──────────────────┐            
            │                                  │            
            │ Enter your ClickUp API Token     │            
            │ Token: pk_t•••••••••••█••        │            
            │                                  │            
            │ Press Enter to connect, Esc to c │            
            │                                  │            
            └──────────────────────────────────┘
