tests/snapshots/snapshot_test__dialog_quit_confirmation.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                    ┌ Confirm ─────────────────────────────┐                    
                    │                                      │                    
                    │ Are you sure you want to quit?       │                    
                    │   No      Yes                        │                    
                    │                                      │                    
                    │                                      │                    
                    │                                      │                    
                    └──────────────────────────────────────┘
